Corrected thesis according to peer-review feedback

--- a/intro.bib
+++ b/intro.bib
@@ -804,3 +804,369 @@ year = {2024} ,
   publisher={Springer}
 }
 
+@article{jin2008factors,
+  title={Factors affecting therapeutic compliance: A review from the patient’s perspective},
+  author={Jin, Jing and Sklar, Grant Edward and Min Sen Oh, Vernon and Chuen Li, Shu},
+  journal={Therapeutics and clinical risk management},
+  volume={4},
+  number={1},
+  pages={269--286},
+  year={2008},
+  publisher={Taylor \& Francis}
+}
+
+@article{dusing2001adverse,
+  title={Adverse events, compliance, and changes in therapy},
+  author={D{\"u}sing, Rainer},
+  journal={Current Hypertension Reports},
+  volume={3},
+  number={6},
+  pages={488--492},
+  year={2001},
+  publisher={Springer}
+}
+
+@article{bentley2022prehistory,
+  title={Prehistory of kinship},
+  author={Bentley, R Alexander},
+  journal={Annual Review of Anthropology},
+  volume={51},
+  number={1},
+  pages={137--154},
+  year={2022},
+  publisher={Annual Reviews}
+}
+
+@article{suryadevara2021comprehensive,
+  title={A Comprehensive Overview of Artificial Neural Networks: Evolution, Architectures, and Applications},
+  author={Suryadevara, Srikanth and Yanamala, Anil Kumar Yadav},
+  journal={Revista de Inteligencia Artificial en Medicina},
+  volume={12},
+  number={1},
+  pages={51--76},
+  year={2021}
+}
+
+@book{shanmuganathan2016artificial,
+  title={Artificial neural network modelling: An introduction},
+  author={Shanmuganathan, Subana},
+  year={2016},
+  publisher={Springer}
+}
+
+@article{ariyo2024anatomy,
+  title={Anatomy and Physiology of the Neuron},
+  author={Ariyo, Oluwatobi and Akter, Farhana},
+  journal={Neuroscience for Neurosurgeons},
+  pages={72},
+  year={2024},
+  publisher={Cambridge University Press}
+}
+
+@article{wu2018development,
+  title={Development and application of artificial neural network},
+  author={Wu, Yu-chen and Feng, Jun-wen},
+  journal={Wireless Personal Communications},
+  volume={102},
+  pages={1645--1656},
+  year={2018},
+  publisher={Springer}
+}
+
+@article{kiaei2023active,
+  title={Active Identity Function as Activation Function},
+  author={Kiaei, Ali Akbar and Boush, Mahnaz and Safaei, Danial and Abadijou, Sadegh and Baselizadeh, Nima and Salari, Nader and Mohammadi, Masoud},
+  year={2023},
+  publisher={Preprints}
+}
+
+@article{tsai2015hardware,
+  title={A hardware-efficient sigmoid function with adjustable precision for a neural network system},
+  author={Tsai, Chang-Hung and Chih, Yu-Ting and Wong, Wing Hung and Lee, Chen-Yi},
+  journal={IEEE Transactions on Circuits and Systems II: Express Briefs},
+  volume={62},
+  number={11},
+  pages={1073--1077},
+  year={2015},
+  publisher={IEEE}
+}
+
+@inproceedings{bai2022relu,
+  title={RELU-function and derived function review},
+  author={Bai, Yuhan},
+  booktitle={SHS Web of Conferences},
+  volume={144},
+  pages={02006},
+  year={2022},
+  organization={EDP Sciences}
+}
+
+
+@inproceedings{zheng2015improving,
+  title={Improving deep neural networks using softplus units},
+  author={Zheng, Hao and Yang, Zhanlei and Liu, Wenju and Liang, Jizhong and Li, Yanpeng},
+  booktitle={2015 International joint conference on neural networks (IJCNN)},
+  pages={1--4},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{ibnu2019determining,
+  title={Determining the neural network topology: A review},
+  author={Ibnu, Choldun R Muh and Santoso, Judhi and Surendro, Kridanto},
+  booktitle={Proceedings of the 2019 8th International Conference on Software and Computer Applications},
+  pages={357--362},
+  year={2019}
+}
+
+@article{razavi2011new,
+  title={A new formulation for feedforward neural networks},
+  author={Razavi, Saman and Tolson, Bryan A},
+  journal={IEEE Transactions on neural networks},
+  volume={22},
+  number={10},
+  pages={1588--1598},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{salehinejad2017recent,
+  title={Recent advances in recurrent neural networks},
+  author={Salehinejad, Hojjat and Sankar, Sharan and Barfett, Joseph and Colak, Errol and Valaee, Shahrokh},
+  journal={arXiv preprint arXiv:1801.01078},
+  year={2017}
+}
+
+@incollection{james2023unsupervised,
+  title={Unsupervised learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert and Taylor, Jonathan},
+  booktitle={An introduction to statistical learning: with applications in Python},
+  pages={503--556},
+  year={2023},
+  publisher={Springer}
+}
+
+@article{wang2020supervised,
+  title={Supervised learning in spiking neural networks: A review of algorithms and evaluations},
+  author={Wang, Xiangwen and Lin, Xianghong and Dang, Xiaochao},
+  journal={Neural Networks},
+  volume={125},
+  pages={258--280},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{berndt2020sampling,
+  title={Sampling methods},
+  author={Berndt, Andrea E},
+  journal={Journal of Human Lactation},
+  volume={36},
+  number={2},
+  pages={224--226},
+  year={2020},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@article{etikan2017sampling,
+  title={Sampling and sampling methods},
+  author={Etikan, Ilker and Bala, Kabiru},
+  journal={Biometrics \& Biostatistics International Journal},
+  volume={5},
+  number={6},
+  pages={00149},
+  year={2017}
+}
+
+@online {unityStore,
+ author = { Unity Technologies } ,
+ year = {2024} ,
+ title = { Unity Asset Store } ,
+   howpublished ={\url{https://assetstore.unity.com/}},
+ url = { https://assetstore.unity.com/ } ,
+ urldate = {2025 -02 -21}
+}
+
+@online {lipImages,
+ author = { Maria Meier } ,
+ year = {2022} ,
+ title = { Lip movement images } ,
+  howpublished ={\url{https://ru.pinterest.com/pin/643592603000351080/}},
+ url = { https://ru.pinterest.com/pin/643592603000351080/ } ,
+ urldate = {2025 -02 -21}
+}
+
+@online {childImages,
+ author = { Katharina Vesper} ,
+ year = {2018} ,
+ title = { Child mode images } ,
+ howpublished ={\url{https://madoo.net/autor/thari/}},
+ url = { https://madoo.net/autor/thari/ } ,
+ urldate = {2025 -02 -21}
+}
+
+@online {assetSpeechBubble,
+ author = { RAFMANIX} ,
+ year = {2021} ,
+ title = { Speech bubble asset} ,
+  howpublished ={\url{https://assetstore.unity.com/packages/2d/environments/2d-atlas-speech-bubbles-alphabet-numbers-88398}},
+ url = { https://assetstore.unity.com/packages/2d/environments/2d-atlas-speech-bubbles-alphabet-numbers-88398 } ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetArcadeBGM,
+ author = { B.G.M} ,
+ year = {2022} ,
+ title = { Arcade BGM asset} ,
+ howpublished ={\url{https://assetstore.unity.com/packages/audio/music/arcade-game-bgm-17-210775}},
+ url = { https://assetstore.unity.com/packages/audio/music/arcade-game-bgm-17-210775} ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetBasicIcons,
+ author = {Kandles} ,
+ year = {2019} ,
+ title = { Basic Icon asset} ,
+ howpublished ={\url{https://assetstore.unity.com/packages/2d/gui/icons/basic-icons-139575}},
+ url = {https://assetstore.unity.com/packages/2d/gui/icons/basic-icons-139575} ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetCasualBGM,
+ author = {B.G.M} ,
+ year = {2019} ,
+ title = { Casual BGM} ,
+ howpublished ={\url{https://assetstore.unity.com/packages/audio/music/casual-game-bgm-5-135943}},
+ url = {https://assetstore.unity.com/packages/audio/music/casual-game-bgm-5-135943} ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetCasualGameSounds,
+ author = {Dustyroom} ,
+ year = {2024} ,
+ title = { Casual game sounds} ,
+ howpublished ={\url{https://assetstore.unity.com/packages/audio/sound-fx/free-casual-game-sfx-pack-54116}},
+ url = {https://assetstore.unity.com/packages/audio/sound-fx/free-casual-game-sfx-pack-54116} ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetPressStart,
+ author = {CodeMan38} ,
+ year = {2024} ,
+ title = { Press start 2 play font},
+  howpublished ={\url{https://fonts.google.com/specimen/Press+Start+2P/about}},
+ url = {https://fonts.google.com/specimen/Press+Start+2P/about} ,
+ urldate = {2025 -02 -25}
+}
+
+@online {assetPixelAdventure1,
+ author = {Pixel Frog} ,
+ year = {2019} ,
+ title = { Pixel Adventure 1 asset} ,
+ howpublished ={\url{https://assetstore.unity.com/packages/2d/characters/pixel-adventure-1-155360}},
+ url = {https://assetstore.unity.com/packages/2d/characters/pixel-adventure-1-155360} ,
+ urldate = {2025 -02 -25}
+}
+@online {assetPixelAdventure2,
+ author = {Pixel Frog} ,
+ year = {2019} ,
+ title = { Pixel Adventure 2 asset} ,
+  howpublished ={\url{https://assetstore.unity.com/packages/2d/characters/pixel-adventure-2-155418}},
+ url = {https://assetstore.unity.com/packages/2d/characters/pixel-adventure-2-155418} ,
+ urldate = {2025 -02 -25}
+}
+
+@article{campbell2001don,
+  title={Why don't patients do their exercises? Understanding non-compliance with physiotherapy in patients with osteoarthritis of the knee},
+  author={Campbell, Rona and Evans, M and Tucker, M and Quilty, B and Dieppe, Paul and Donovan, JL},
+  journal={Journal of Epidemiology \& Community Health},
+  volume={55},
+  number={2},
+  pages={132--138},
+  year={2001},
+  publisher={BMJ Publishing Group Ltd}
+}
+
+@article{cochrane2000inhaled,
+  title={Inhaled corticosteroids for asthma therapy: patient compliance, devices, and inhalation technique},
+  author={Cochrane, Mac G and Bala, Mohan V and Downs, Kristen E and Mauskopf, Josephine and Ben-Joseph, Rami H},
+  journal={Chest},
+  volume={117},
+  number={2},
+  pages={542--550},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@inproceedings{siris2006adherence,
+  title={Adherence to bisphosphonate therapy and fracture rates in osteoporotic women: relationship to vertebral and nonvertebral fractures from 2 US claims databases},
+  author={Siris, Ethel S and Harris, Steven T and Rosen, Clifford J and Barr, Charles E and Arvesen, James N and Abbott, Thomas A and Silverman, Stuart},
+  booktitle={Mayo Clinic Proceedings},
+  volume={81},
+  number={8},
+  pages={1013--1022},
+  year={2006},
+  organization={Elsevier}
+}
+
+@article{garcia2013adherence,
+  title={Adherence to therapies in patients with type 2 diabetes},
+  author={Garc{\'\i}a-P{\'e}rez, Luis-Emilio and {\'A}lvarez, Mar{\'\i}a and Dilla, Tatiana and Gil-Guill{\'e}n, Vicente and Orozco-Beltr{\'a}n, Domingo},
+  journal={Diabetes Therapy},
+  volume={4},
+  pages={175--194},
+  year={2013},
+  publisher={Springer}
+}
+
+@book{still2017fundamentals,
+  title={Fundamentals of user-centered design: A practical approach},
+  author={Still, Brian and Crane, Kate},
+  year={2017},
+  publisher={CRC press}
+}
+
+@book{garrett2022elements,
+  title={The elements of user experience},
+  author={Garrett, Jesse James},
+  year={2022},
+}
+
+@book{colborne2017simple,
+  title={Simple and usable web, mobile, and interaction design},
+  author={Colborne, Giles},
+  year={2017},
+  publisher={New Riders}
+}
+
+@article{cooper199914,
+  title={14 Principles of Polite Apps},
+  author={Cooper, Alan},
+  journal={Visual Basic Programmers Journal (June)},
+  volume={62},
+  pages={66},
+  year={1999}
+}
+
+@inproceedings{jones2004designer,
+  title={The Designer's situation awareness toolkit: Support for user-centered design},
+  author={Jones, Debra G and Endsley, Mica R and Bolstad, Mark and Estes, Gil},
+  booktitle={Proceedings of the human factors and ergonomics society annual meeting},
+  volume={48},
+  number={3},
+  pages={653--657},
+  year={2004},
+  organization={SAGE Publications Sage CA: Los Angeles, CA}
+}
+
+@inproceedings{morgan2004360,
+  title={360 degrees of usability},
+  author={Morgan, Michael and Borns, Laura},
+  booktitle={CHI'04 Extended Abstracts on Human Factors in Computing Systems},
+  pages={795--809},
+  year={2004}
+}
+
+
+
+
+
